--- a/src/Html.Abstractions/src/Microsoft.AspNetCore.Html.Abstractions.csproj
+++ b/src/Html.Abstractions/src/Microsoft.AspNetCore.Html.Abstractions.csproj
@@ -11,7 +11,7 @@ Microsoft.AspNetCore.Html.IHtmlContent</Description>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageTags>aspnetcore</PackageTags>
     <IsPackable>false</IsPackable>
-    <Nullable>enable</Nullable>
+    <IsTrimmable>true</IsTrimmable>
   </PropertyGroup>
 
 </Project>
