--- a/eng/Build.props
+++ b/eng/Build.props
@@ -199,7 +199,7 @@
                           $(RepoRoot)src\Extensions\**\*.csproj;
                           $(RepoRoot)src\BuildAfterTargetingPack\*.csproj;
                           $(RepoRoot)src\OpenApi\**\*.csproj;
-                          $(RepoRoot)eng\helix\content\RunTests\RunTests.csproj;
+                          $(RepoRoot)eng\tools\RunTests\RunTests.csproj;
                           "
                         Exclude="
                           @(ProjectToBuild);
