--- a/eng/targets/Helix.targets
+++ b/eng/targets/Helix.targets
@@ -188,9 +188,9 @@
         SkipUnchangedFiles="$(SkipCopyUnchangedFiles)" />
 
     <!--
-      Use the shared framework and ref/ assemblies copied to the Helix agents and expanded by RunTests. Unfortunately,
-      tests of Microsoft.NET.Sdk.Web templates will not reference the just-built Microsoft.NET.Sdk.Razor. Adding a
-      package reference for that would confuse tests of Microsoft.NET.Sdk templates.
+      Use the shared framework and ref/ assemblies copied to the Helix agents and expanded by HelixTestRunner.
+      Unfortunately, tests of Microsoft.NET.Sdk.Web templates will not reference the just-built
+      Microsoft.NET.Sdk.Razor. Adding a package reference for that would confuse tests of Microsoft.NET.Sdk templates.
     -->
     <Copy SourceFiles="$(ArtifactsBinDir)GenerateFiles\Directory.Build.props"
         DestinationFiles="$(PublishDir)Directory.Build.props"
