--- a/.azure/pipelines/jobs/default-build.yml
+++ b/.azure/pipelines/jobs/default-build.yml
@@ -123,7 +123,8 @@ jobs:
           demands: ImageOverride -equals 1es-windows-2019-open
         ${{ if eq(variables['System.TeamProject'], 'internal') }}:
           name: NetCore1ESPool-Internal
-          demands: ImageOverride -equals 1es-windows-2019
+          # Visual Studio Enterprise - contains some stuff, like SQL Server and IIS Express, that we use for testing
+          demands: ImageOverride -equals Build.Server.Amd64.VS2019
     ${{ if ne(parameters.container, '') }}:
       container: ${{ parameters.container }}
     ${{ if ne(parameters.disableComponentGovernance, '') }}:
