Helix Restore Issue Mitigation (#41311)
* RunTests dotnet run --no-build

* Remove duplicate run

* Add to Build.props

* Treat CA2007 as a warning in RunTests

* NoWarn CA2007

* Ignore NU5104 for System.CommandLine prerelease package

* PR Feedback

* PR Feedback

* Generate .config/dotnet-tools.json
  - add generation to GenerateFiles.csproj
  - include all required versions in eng/Versions.props
    - nit: bump tool versions slightly
    - `dotnet-dump` move from `5.0.0-*` to `6.0.322601` is largest version bump
  - have `git` ignore generated file
    - nit: put `*.svclog` together w/ other extension exclusions

* Add tool packages to Helix correlation payloads

* Do not restore tools from network
  - get tool packages from Helix correlation root
  - to do this, save and restore NuGet.config file
  - this removes `--version` from `dotnet-dump` and `dotnet-ef` installations
    - will only have a single package for each tool in the correlation payload

* Do not pass `dotnet-ef` version to `RunTests`
  - mostly cleanup; no longer needed

* Remove DotNetToolsInstaller.csproj
  - mostly cleanup
  - `dotnet-ef` tool now restored by Arcade's Tools.proj much earlier in our build because
    most configured tool packages are needed in `RunTests` on Helix agents

* Add `--playwright` option in `Runtests`
  - remove `INSTALLPLAYWRIGHT` define and `$env:INSTALLPLAYWRIGHT`
  - always reference Microsoft.Playwright in `RunTests`
  - nit: `InstallPlaywrightAsync()` wasn't `async`; fix it and rename to `InstallPlaywright()`

* Use Arcade SDK in `RunTests` and `Publish` project
  - match most other projects in this repo
    - remove empty Directory.Build.props and .targets files preventing Arcade imports
  - exclude project build if `$(SkipTestBuild)` (though not a test project)

* Correct minor problems in `RunTests` source

* Use file-scoped namespaces in `RunTests` source

* Use VS code fixes in `RunTests`

* Use publi

--- a/eng/Build.props
+++ b/eng/Build.props
@@ -199,6 +199,7 @@
                           $(RepoRoot)src\Extensions\**\*.csproj;
                           $(RepoRoot)src\BuildAfterTargetingPack\*.csproj;
                           $(RepoRoot)src\OpenApi\**\*.csproj;
+                          $(RepoRoot)eng\tools\HelixTestRunner\HelixTestRunner.csproj;
                           "
                         Exclude="
                           @(ProjectToBuild);
