Give `$(DotnetEfVersion)` readable casing - `msbuild` property names are case-insensitive anyway - leave property setting alone; `darc` writes `<dotnetefVersion />` regardless of current case   - i.e. changing the setting would be very short-lived

--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -284,7 +284,7 @@
     <MicrosoftDataSqlClientVersion>4.0.1</MicrosoftDataSqlClientVersion>
     <MicrosoftAspNetCoreAppVersion>6.0.0-preview.3.21167.1</MicrosoftAspNetCoreAppVersion>
     <MicrosoftOpenApiVersion>1.2.3</MicrosoftOpenApiVersion>
-    <!-- dotnet tool versions (see also auto-updated dotnetefVersion property). -->
+    <!-- dotnet tool versions (see also auto-updated DotnetEfVersion property). -->
     <DotnetDumpVersion>6.0.322601</DotnetDumpVersion>
     <DotnetServeVersion>1.10.93</DotnetServeVersion>
     <MicrosoftPlaywrightCLIVersion>1.2.3</MicrosoftPlaywrightCLIVersion>
