--- a/eng/tools/GenerateFiles/dotnet-tools.json.in
+++ b/eng/tools/GenerateFiles/dotnet-tools.json.in
@@ -9,7 +9,7 @@
       ]
     },
     "dotnet-ef": {
-      "version": "${dotnetefVersion}",
+      "version": "${DotnetEfVersion}",
       "commands": [
         "dotnet-ef"
       ]
