--- a/src/SignalR/clients/ts/FunctionalTests/package.json
+++ b/src/SignalR/clients/ts/FunctionalTests/package.json
@@ -56,7 +56,8 @@
     "lodash": ">=4.17.21",
     "url-parse": ">=1.5.6",
     "ua-parser-js": "^0.7.30",
-    "minimist": ">=1.2.6"
+    "minimist": ">=1.2.6",
+    "ws": "^7.4.6"
   },
   "author": "",
   "license": "MIT"
