--- a/src/SignalR/clients/ts/signalr-protocol-msgpack/package.json
+++ b/src/SignalR/clients/ts/signalr-protocol-msgpack/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {},
   "resolutions": {
-    "url-parse": ">=1.5.6"
+    "url-parse": ">=1.5.6",
+    "ws": "^7.4.6"
   }
 }
