--- a/src/Components/WebAssembly/Authentication.Msal/src/Interop/package.json
+++ b/src/Components/WebAssembly/Authentication.Msal/src/Interop/package.json
@@ -16,7 +16,7 @@
     "@azure/msal-browser": "2.8.0"
   },
   "resolutions": {
-    "ansi-regex": ">=4.1.1",
+    "ansi-regex": "^4.1.1",
     "minimist": ">=1.2.6"
   }
 }
