--- a/src/SignalR/clients/ts/common/package.json
+++ b/src/SignalR/clients/ts/common/package.json
@@ -26,7 +26,7 @@
   },
   "resolutions": {
     "lodash": ">=4.17.21",
-    "ansi-regex": ">=4.1.1",
+    "ansi-regex": "^4.1.1",
     "minimist": ">=1.2.6"
   }
 }
