Fix nuget alerts

--- a/src/Tools/Microsoft.dotnet-openapi/src/Microsoft.dotnet-openapi.csproj
+++ b/src/Tools/Microsoft.dotnet-openapi/src/Microsoft.dotnet-openapi.csproj
@@ -18,6 +18,7 @@
     <Reference Include="Microsoft.Build" ExcludeAssets="runtime" />
     <Reference Include="Microsoft.Build.Locator" />
     <Reference Include="Microsoft.Win32.Registry"  />
+    <Reference Include="System.Private.Uri" />
     <Reference Include="System.Security.Principal.Windows"  />
   </ItemGroup>
 
