--- a/src/Tools/Microsoft.dotnet-openapi/src/Microsoft.dotnet-openapi.csproj
+++ b/src/Tools/Microsoft.dotnet-openapi/src/Microsoft.dotnet-openapi.csproj
@@ -19,6 +19,7 @@
     <Reference Include="Microsoft.Build.Locator" />
     <Reference Include="Microsoft.Extensions.CommandLineUtils.Sources" />
     <Reference Include="Microsoft.Win32.Registry"  />
+    <Reference Include="System.Private.Uri" />
     <Reference Include="System.Security.Principal.Windows"  />
   </ItemGroup>
 
