--- a/src/Components/Web.JS/package.json
+++ b/src/Components/Web.JS/package.json
@@ -39,6 +39,6 @@
     "tar": ">=4.4.18",
     "url-parse": ">=1.5.8",
     "minimist": ">=1.2.6",
-    "ansi-regex": ">=4.1.1"
+    "ansi-regex": "^4.1.1"
   }
 }
