--- a/src/Components/WebAssembly/WebAssembly.Authentication/src/Interop/package.json
+++ b/src/Components/WebAssembly/WebAssembly.Authentication/src/Interop/package.json
@@ -18,6 +18,6 @@
   "resolutions": {
     "tar": ">=4.4.18",
     "minimist": ">=1.2.6",
-    "ansi-regex": ">=4.1.1"
+    "ansi-regex": "^4.1.1"
   }
 }
