--- a/src/JSInterop/Microsoft.JSInterop.JS/src/package.json
+++ b/src/JSInterop/Microsoft.JSInterop.JS/src/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "rimraf": "^3.0.2",
     "tslint": "^6.1.3",
-    "typescript": "^4.2.2"
+    "typescript": "^4.2.2",
+    "yarn-audit-fix": "^9.3.1"
   }
 }
