--- a/src/SignalR/clients/ts/FunctionalTests/package.json
+++ b/src/SignalR/clients/ts/FunctionalTests/package.json
@@ -34,7 +34,8 @@
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5",
     "webpack": "^5.23.0",
-    "ws": " ^6.0.0"
+    "ws": " ^6.0.0",
+    "yarn-audit-fix": "^9.3.1"
   },
   "scripts": {
     "preclean": "cd .. && yarn run build",
