--- a/src/SignalR/clients/ts/signalr-protocol-msgpack/package.json
+++ b/src/SignalR/clients/ts/signalr-protocol-msgpack/package.json
@@ -47,7 +47,9 @@
     "@microsoft/signalr": "link:../signalr",
     "@msgpack/msgpack": "^2.7.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "yarn-audit-fix": "^9.3.1"
+  },
   "resolutions": {
     "url-parse": ">=1.5.8",
     "node-fetch": ">=2.6.7"
