--- a/src/Components/Web.JS/package.json
+++ b/src/Components/Web.JS/package.json
@@ -38,8 +38,7 @@
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.2",
     "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0",
-    "yarn-audit-fix": "^9.3.1"
+    "webpack-cli": "^4.8.0"
   },
   "resolutions": {
     "**/set-value": "^4.0.1",
