--- a/src/Components/WebAssembly/Authentication.Msal/src/Interop/package.json
+++ b/src/Components/WebAssembly/Authentication.Msal/src/Interop/package.json
@@ -23,8 +23,7 @@
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.2",
     "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0",
-    "yarn-audit-fix": "^9.3.1"
+    "webpack-cli": "^4.8.0"
   },
   "dependencies": {
     "@azure/msal-browser": "^2.16.1"
