--- a/src/Servers/IIS/IIS/samples/NativeIISSample/NativeIISSample.csproj
+++ b/src/Servers/IIS/IIS/samples/NativeIISSample/NativeIISSample.csproj
@@ -14,6 +14,9 @@
     <Reference Include="Microsoft.AspNetCore.Server.IIS" />
     <Reference Include="Microsoft.AspNetCore.Server.IISIntegration" />
     <Reference Include="Microsoft.AspNetCore.Server.Kestrel" />
+    <Reference Include="Microsoft.Win32.Primitives" />
+    <Reference Include="System.Net.Primitives" />
+    <Reference Include="System.Private.Uri" />
   </ItemGroup>
 
 </Project>
