[release/3.1] Fix component government bugs (#41160)
* Fix Component Governance bugs

* Fix more bugs

* More fixes

* fix

* Fix

* Fix

* Fix

* Fix

* Messagepack

* Fix

* More

* Fixup

* Node 14.x

* Fixup

* Fix nuget alerts

* More fixes

* Remove yarn-audit-fix

* Try other pool

* Update CSharp.Common.props

* Update HttpsTests.cs

* Update TlsTests.cs

* Update HttpsConnectionMiddlewareTests.cs

--- a/.azure/pipelines/jobs/default-build.yml
+++ b/.azure/pipelines/jobs/default-build.yml
@@ -94,13 +94,8 @@ jobs:
         vmImage: ubuntu-18.04
       ${{ if eq(parameters.agentOs, 'Windows') }}:
         ${{ if eq(variables['System.TeamProject'], 'public') }}:
-          name: NetCore1ESPool-Svc-Public
-          ${{ if ne(parameters.isTestingJob, true) }}:
-            # Visual Studio Build Tools
-            demands: ImageOverride -equals Build.Server.Amd64.VS2019.BT.Open
-          ${{ if eq(parameters.isTestingJob, true) }}:
-            # Visual Studio Enterprise - contains some stuff, like SQL Server and IIS Express, that we use for testing
-            demands: ImageOverride -equals Build.Server.Amd64.VS2019.Open
+          name: NetCore1ESPool-Public
+          demands: ImageOverride -equals 1es-windows-2019-open
         ${{ if eq(variables['System.TeamProject'], 'internal') }}:
           name: NetCore1ESPool-Svc-Internal
           # Visual Studio Enterprise - contains some stuff, like SQL Server and IIS Express, that we use for testing
@@ -139,9 +134,9 @@ jobs:
         displayName: Start background dump collection
     - ${{ if eq(parameters.installNodeJs, 'true') }}:
       - task: NodeTool@0
-        displayName: Install Node 10.x
+        displayName: Install Node 14.x
         inputs:
-          versionSpec: 10.x
+          versionSpec: 14.x
     - ${{ if eq(parameters.agentOs, 'Windows') }}:
       - task: NuGetCommand@2
         displayName: 'Clear NuGet caches'
