--- a/src/Components/WebAssembly/Authentication.Msal/src/Interop/package.json
+++ b/src/Components/WebAssembly/Authentication.Msal/src/Interop/package.json
@@ -16,6 +16,8 @@
     "msal": "^1.2.1"
   },
   "resolutions": {
-    "tar": ">=4.4.18"
+    "tar": ">=4.4.18",
+    "minimist": ">=1.2.6",
+    "ansi-regex": "^4.1.1"
   }
 }
