--- a/src/Middleware/SpaServices/src/npm/aspnet-webpack/package.json
+++ b/src/Middleware/SpaServices/src/npm/aspnet-webpack/package.json
@@ -34,5 +34,9 @@
   "peerDependencies": {
     "webpack": "^1.13.2 || ^2.1.0-beta || ^3.0.0 || ^4.0.0",
     "webpack-dev-middleware": "^1.8.4 || ^3.0.0"
+  },
+  "resolutions": {
+    "minimist": ">=1.2.6",
+    "ansi-regex": ">=4.1.1"
   }
 }
