--- a/eng/tools/HelixTestRunner/HelixTestRunner.csproj
+++ b/eng/tools/HelixTestRunner/HelixTestRunner.csproj
@@ -13,6 +13,7 @@
     <OutputType>Exe</OutputType>
     <NoWarn>$(NoWarn);CA2007;NU5104</NoWarn>
     <IsPackable>false</IsPackable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 
     <!-- We don't need this unless building for tests. -->
     <ExcludeFromBuild Condition=" '$(DotNetBuildFromSource)' == 'true' OR '$(SkipTestBuild)' == 'true' ">true</ExcludeFromBuild>
