--- a/.azure/pipelines/helix-matrix.yml
+++ b/.azure/pipelines/helix-matrix.yml
@@ -1,6 +1,7 @@
 # We only want to run full helix matrix on main
 pr: none
-trigger: none
+trigger:
+- damianedwards-template-tests
 schedules:
 # Cron timezone is UTC.
 - cron: "0 */12 * * *"
