--- a/.azure/pipelines/helix-matrix.yml
+++ b/.azure/pipelines/helix-matrix.yml
@@ -1,7 +1,6 @@
 # We only want to run full helix matrix on main
 pr: none
-trigger:
-- damianedwards-template-tests
+trigger: none
 schedules:
 # Cron timezone is UTC.
 - cron: "0 */12 * * *"
