Surrogate argument list in Minimal APIs (#41325)
* Core funcionality

* Changing the order

* Not checking attribute from type

* Code cleanup

* Adding missing ParamCheckExpression

* Adding support for records and structs

* change to a static local function

* Remove empty line

* Updating APIExplorer

* Updating APIExplorer

* Updating OpenAPI

* PR feedback

* Updating comment

* Allowing attribute on classes

* Reducing initial memory allocation

* Adding constructorinfo caching

* Updating OpenAPI generator

* Updating APIExplorer

* Adding constructor cache

* Renaming to SurrogateParameterInfo

* Updating OpenAPI Generator

* Updating ApiExplorer

* Updating RequestDelegateFactory

* Adding initial test cases

* Rollback bad change

* Fixing merge issues

* Initial SurrogateParameterInfo tests

* Adding surrogateparameterinfo tests

* Using Span

* Adding FindConstructor unit tests

* Using span

* Updating error message

* Updating surrogateParameteInfo and fix unit test

* Adding RequestDelegateFactory tests

* Code cleanup

* code clean up

* code clean up

* Adding suppress

* Adding trimming warning suppress

* PR feeback

* PR feeback

* Mark types as sealed

* Seal SurrogateParameterInfo

* Removing attribute from type

* API Review changes

* Updating documentation

* Renaming surrogateParameterInfo

* Code cleanup

* Code cleanup

* Code cleanup

* Code cleanup

* Updating tests to include FromService in properties

* Renaming to BindPropertiesAsParameter

* Renaming to BindParameterFromProperties

* Adding more FromServices tests

* PR Feedback

* PR Feeback

* Merging with latest OpenAPI changes

* adding more tests

* Update src/Shared/ParameterBindingMethodCache.cs

Co-authored-by: Brennan <brecon@microsoft.com>

* Updating errormessag on unit tests

* Updating errormessag on unit tests

* PR Feedback

Co-authored-by: 

--- a/src/Mvc/Mvc.ApiExplorer/src/Microsoft.AspNetCore.Mvc.ApiExplorer.csproj
+++ b/src/Mvc/Mvc.ApiExplorer/src/Microsoft.AspNetCore.Mvc.ApiExplorer.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <Compile Include="$(SharedSourceRoot)RoslynUtils\TypeHelper.cs" />
+    <Compile Include="$(SharedSourceRoot)PropertyAsParameterInfo.cs" LinkBase="Shared" />
   </ItemGroup>
 
   <ItemGroup>
