Fix project template test issues
* Update template baseline test to use original file name
* Enable more tracing & dump collect in helix test runner
* Disable test parallelization for project template tests
* Ensure project directory name uniqueness
* Fix tests using skip attributes but not using ConditionalFact/ConditionalTheory attributes
* Print test timeout message from Helix test runner
* Add timestamps to helix runner console logs
* Increase helix timeout for project template tests
* Skip LocalDb template tests on non-Windows platforms
* Update test cmd args in TestRunner.cs to modern, documented versions
* Split up long-running theories to avoid test timeouts
* Remove template test locks
* Skip template tests on Debian11.Arm as they take too long to run there
* Updated README with details about test timeouts & conditional tests

Co-authored-by: Hao Kung <HaoK@users.noreply.github.com>

--- a/src/ProjectTemplates/test/ProjectTemplates.Tests.csproj
+++ b/src/ProjectTemplates/test/ProjectTemplates.Tests.csproj
@@ -7,7 +7,7 @@
     <TestGroupName>ProjectTemplates.E2ETests</TestGroupName>
     <DefineConstants>$(DefineConstants);XPLAT</DefineConstants>
 
-    <RunTemplateTests Condition="'$(RunTemplateTests)' == ''" >true</RunTemplateTests>
+    <RunTemplateTests Condition="'$(RunTemplateTests)' == ''">true</RunTemplateTests>
     <SkipTests Condition="'$(RunTemplateTests)' != 'true'">true</SkipTests>
 
     <BaseOutputPath />
@@ -18,6 +18,9 @@
     <TestTemplateCreationFolder>TestTemplates\</TestTemplateCreationFolder>
     <TestPackageRestorePath>$([MSBuild]::EnsureTrailingSlash('$(RepoRoot)'))obj\template-restore\</TestPackageRestorePath>
     <TestDependsOnAspNetPackages>true</TestDependsOnAspNetPackages>
+    <SkipHelixQueues>
+      $(HelixQueueArmDebian11);
+    </SkipHelixQueues>
   </PropertyGroup>
 
   <ItemGroup>
