--- a/src/Grpc/JsonTranscoding/test/testassets/Sandbox/Sandbox.csproj
+++ b/src/Grpc/JsonTranscoding/test/testassets/Sandbox/Sandbox.csproj
@@ -1,6 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>$(DefaultNetCoreTargetFramework)</TargetFramework>
+    <!-- Suppress warnings about lowercase variable names in generated code -->
+    <NoWarn>$(NoWarn);CS8981</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
