--- a/.azure/pipelines/azure-pipelines-mirror-within-azdo.yml
+++ b/.azure/pipelines/azure-pipelines-mirror-within-azdo.yml
@@ -26,9 +26,9 @@ jobs:
       - name: AzdoRepo
         value: https://dnceng@dev.azure.com/dnceng/internal/_git/dotnet-aspnetcore
       - name: TargetBranchName
-        value: internal/release/6.0-nonstable
+        value: $(Build.SourceBranch)-nonstable
       - name: BranchToMirror
-        value: internal/release/6.0
+        value: $(Build.SourceBranch)
       steps:
       - script: |
           git clone https://dn-bot:$(dn-bot-dnceng-build-rw-code-rw)@dev.azure.com/dnceng/internal/_git/$(AzdoRepo) $(WorkingDirectoryName)
