--- a/.azure/pipelines/azure-pipelines-mirror-within-azdo.yml
+++ b/.azure/pipelines/azure-pipelines-mirror-within-azdo.yml
@@ -24,7 +24,7 @@ jobs:
       - name: WorkingDirectoryName
         value: repo-dir
       - name: AzdoRepo
-        value: https://dnceng@dev.azure.com/dnceng/internal/_git/dotnet-aspnetcore
+        value: dotnet-aspnetcore
       - name: TargetBranchName
         value: $(Build.SourceBranch)-nonstable
       - name: BranchToMirror
